--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
+    "firebase/": "https://esm.sh/firebase@^12.6.0/"
   }
 }
 </script>
